# gp-treemap

./: .gitignore  AGENTS.md  README.md  TODO.md  package-lock.json  package.json  playwright.config.js
GrandPerspective-3_6_4/: CHANGES.txt  LOCALIZATION.txt  README.txt
gallery/: comparison.html  gp-treemap-source-tree-disk-usage.html  index.html  llm-density-fruit-flies.html  self.html  table-treemap-energy-by-fuel.html  table-treemap-energy-fuel.html  table-treemap-us-outlays-yoy.html  table-treemap-us-outlays.html
python/: README.md  pyproject.toml
python/scripts/: refresh_bundle.sh
python/src/gp_treemap/: __init__.py  api.py  encoder.py  html.py
python/tests/: test_smoke.py
samples/: budget.html  depth.html  filesystem.html  gradients.html  index.html  interactions.html  located.html  min-cell.html
scripts/: build-comparison.mjs  screenshot-gallery.mjs  sync_python_version.mjs  update_gallery.sh
src/: balancer.js  builder.js  color-resolver.js  color-scale.js  format.js  gp-treemap.js  gradient.js  hash.js  layout.js  lut.js  painter.js  palettes.js  raised-treemap.js  render-worker.js
tests/: breadcrumb-dblclick.spec.js  bundle-freshness.spec.js  click-breadcrumb.spec.js  debug-scan.spec.js  file-url.spec.js  gpdu-json.spec.js  gpdu-llm-density.spec.js  gpdu-s3-inventory.spec.js  gpdu-s3.spec.js  gpdu-scan.spec.js  gpdu-sqlite.spec.js  readme-deno-command.spec.js  scan-core.spec.js  scan.spec.js  stretch-zoom-holes.html  stretch-zoom.spec.js  unit-fixture.html  units.spec.js  url-hash.spec.js  visual.spec.js
tools/: bench-layout.js  bench.js  (+17 more)
(+517 files in other folders)
