[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "gp_treemap"
version = "0.6.0"
description = "Python wrapper around gp-treemap: pandas DataFrame → self-contained HTML treemap."
readme = "README.md"
license = { text = "GPL-2.0-only" }
requires-python = ">=3.9"
authors = [{ name = "Imbue", email = "hello@imbue.com" }]
keywords = ["treemap", "visualization", "pandas", "plotly", "grandperspective"]
dependencies = [
  "pandas>=1.3",
  "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/imbue-ai/gp-treemap"
Repository = "https://github.com/imbue-ai/gp-treemap"

[tool.hatch.build.targets.wheel]
packages = ["src/gp_treemap"]

[tool.hatch.build.targets.wheel.force-include]
"src/gp_treemap/_bundle/gp-treemap.bundle.js" = "gp_treemap/_bundle/gp-treemap.bundle.js"
"src/gp_treemap/_bundle/scan-loader.js" = "gp_treemap/_bundle/scan-loader.js"
